try fix logo dragging on mobile

--- a/src/popup.css
+++ b/src/popup.css
@@ -88,6 +88,10 @@
     }
 }
 
+.logoWrapper {
+    touch-action: none;
+}
+
 .logo {
     pointer-events: none;
     width: 256px;
